# regime_framework

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: btc_spot_long_only.yaml  default.yaml  trading_signals_battery.yaml
configs/presets/: btc_binance_1h.yaml  btc_binance_1h_multi.yaml  eth_binance_1h.yaml  hype_hyperliquid_1h.yaml
regime_framework/: __init__.py  cli.py  config.py
regime_framework/backtesting/: __init__.py  freqtrade_runner.py  predictions_export.py  report.py  strategy_template.py
regime_framework/data/: __init__.py  alignment.py  conventions.py  external.py  loaders.py
regime_framework/evaluation/: __init__.py  metrics.py  runner.py  splits.py
regime_framework/features/: __init__.py  external.py  funding.py  pipeline.py  regime_signals.py  technical.py  trading_signals.py
regime_framework/labels/: __init__.py  base.py  drawdown.py  trend_scan.py  triple_barrier.py
regime_framework/predictors/: __init__.py  bagging.py  base.py  classical.py  deep_nets.py  ensemble.py  rule_based.py  transformer.py
regime_framework/predictors/pretrained/: __init__.py  base.py  chronos.py  lag_llama.py  moirai.py  timemoe.py  timesfm.py  toto.py
regime_framework/predictors/rl/: __init__.py  _fqi.py  base.py  cat.py  env.py  histgb.py  huber.py  lgb.py  linear.py  nn.py  rf.py  ridge.py  xgb.py
regime_framework/signal_analysis/: __init__.py  lift.py  mutual_info.py  ranker.py
regime_framework/visualization/: __init__.py  regime_plots.py
scripts/: analyze_signals.py  benchmark_pretrained.py  probe_long_only.py  run_full_comparison.py
