[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime_framework"
version = "0.1.0"
description = "Modular framework for time series regime classification benchmark"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Valentin Nyzam" }]

dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "torch>=2.1",
    "matplotlib",
    "PyYAML",
    "tqdm",
    "huggingface-hub",
    "transformers>=4.40",
    "accelerate",
    "safetensors",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
chronos = ["chronos-forecasting"]
timesfm = ["timesfm"]
moirai = ["uni2ts"]
timemoe = []
lag_llama = ["gluonts"]
toto = []
all-pretrained = [
    "chronos-forecasting",
    "timesfm",
    "uni2ts",
    "gluonts",
]
# Reinforcement learning predictors (NN approximator via SB3).
# Linear-Q and LightGBM-FQI variants don't need SB3 — they're implemented
# from scratch in regime_framework/predictors/rl/. Install this extra to
# enable the NN-based DQN / SAC predictors.
rl = ["stable-baselines3>=2.0", "gymnasium>=0.29"]

[project.scripts]
regime-run = "regime_framework.cli:main"

[tool.setuptools.packages.find]
include = ["regime_framework*"]
exclude = ["tests*", "scripts*"]

[tool.pyright]
include = ["regime_framework"]
extraPaths = ["."]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportPrivateImportUsage = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportIndexIssue = "none"
reportAttributeAccessIssue = "warning"
useLibraryCodeForTypes = true
